--- a/index.html
+++ b/index.html
@@ -6,6 +6,146 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Hello world!</p>
+    <header>
+      <a href="/">WEBSTUDIO</a>
+      <nav>
+        <ul>
+          <li><a href="/studio">Studio</a></li>
+          <li><a href="/portfolio">Portfolio</a></li>
+          <li><a href="/contacts">Contacts</a></li>
+        </ul>
+        >
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+    </header>
+    <main>
+      <section>
+        <h1>
+          Effective Solutions <br />
+          for Your Business
+        </h1>
+        <button type="button">Order Service</button>
+      </section>
+    </main>
+    <section>
+      <h2><!--Our values--></h2>
+      <ul>
+        <li>
+          <h3>Strategy</h3>
+          <span>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </span>
+        </li>
+
+        <li>
+          <h3>Punctuality</h3>
+          <span>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </span>
+        </li>
+
+        <li>
+          <h3>Diligence</h3>
+          <span>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </span>
+        </li>
+
+        <li>
+          <h3>Technologies</h3>
+          <span>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </span>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>What are we doing</h2>
+      <ul>
+        <li>
+          <img
+            src="images/picture1.jpg"
+            width="360"
+            height="300"
+            alt="old Imac"
+          />
+        </li>
+        <li>
+          <img
+            src="images/picture2.jpg"
+            width="360"
+            height="300"
+            alt="screenshots coming out of the iphone"
+          />
+        </li>
+        <li>
+          <img
+            src="images/picture3.jpg"
+            width="360"
+            height="300"
+            alt="heand holding phone in front of laptop "
+          />
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Our Team</h2>
+      <ul>
+        <li>
+          <img
+            src="images/Mark-Guerrero.jpg"
+            width="264"
+            height="260"
+            alt="Mark Guerrero"
+          />
+          <h3>Mark Guerrero</h3>
+          <span>Product Designer</span>
+        </li>
+        <li>
+          <img
+            src="images/Tom-Ford.jpg"
+            width="264"
+            height="260"
+            alt="Tom Ford"
+          />
+
+          <h3>Tom Ford</h3>
+          <span>Frontend Developer</span>
+        </li>
+        <li>
+          <img
+            src="images/Camila-Garcia.jpeg"
+            width="264"
+            height="260"
+            alt="Camila Garcia"
+          />
+
+          <h3>Camila Garcia</h3>
+          <span>Marketing</span>
+        </li>
+        <li>
+          <img
+            src="images/Daniel-Wilson.jpg"
+            width="264"
+            height="260"
+            alt="Daniel Wilson"
+          />
+          <h3>Daniel Wilson</h3>
+          <span>UI Designer</span>
+        </li>
+      </ul>
+    </section>
+    <footer>
+      <h3>WEBSTUDIO</h3>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
