--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="/">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="/studio">Studio</a></li>
@@ -16,8 +16,12 @@
         </ul>
         >
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <address>
+      <ul>
+       <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
+       <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      
+    </address>
     </header>
     <main>
       <section>
