--- a/index.html
+++ b/index.html
@@ -20,55 +20,53 @@
       <ul>
        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      
-    </address>
+      </address>
     </header>
     <main>
-      <section>
+      <section1>
         <h1>
-          Effective Solutions <br />
-          for Your Business
+          Effective Solutions for Your Business
         </h1>
         <button type="button">Order Service</button>
-      </section>
+      </section1>
     </main>
-    <section>
-      <h2><!--Our values--></h2>
+    <section2>
+      <h2>Our values</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
-          <span>
+          <p>
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
-          </span>
+          </p>
         </li>
 
         <li>
           <h3>Punctuality</h3>
-          <span>
+          <p>
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
-          </span>
+          </p>
         </li>
 
         <li>
           <h3>Diligence</h3>
-          <span>
+          <p>
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
-          </span>
+          </p>
         </li>
 
         <li>
           <h3>Technologies</h3>
-          <span>
+          <p>
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
-          </span>
+          </p>
         </li>
       </ul>
-    </section>
-    <section>
+    </section2>
+    <section3>
       <h2>What are we doing</h2>
       <ul>
         <li>
@@ -96,8 +94,8 @@
           />
         </li>
       </ul>
-    </section>
-    <section>
+    </section3>
+    <section4>
       <h2>Our Team</h2>
       <ul>
         <li>
@@ -143,7 +141,8 @@
           <span>UI Designer</span>
         </li>
       </ul>
-    </section>
+    </section4>
+    <section>
     <footer>
       <h3>WEBSTUDIO</h3>
       <p>
@@ -151,5 +150,6 @@
         marketing & growth solutions.
       </p>
     </footer>
+  </section>
   </body>
 </html>
