--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="/studio">Studio</a></li>
           <li><a href="/portfolio">Portfolio</a></li>
@@ -17,20 +17,19 @@
         >
       </nav>
       <address>
-      <ul>
-       <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-       <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
-      <section1>
-        <h1>
-          Effective Solutions for Your Business
-        </h1>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-      </section1>
+      </section>
     </main>
-    <section2>
+    <section>
       <h2>Our values</h2>
       <ul>
         <li>
@@ -65,13 +64,13 @@
           </p>
         </li>
       </ul>
-    </section2>
-    <section3>
+    </section>
+    <section>
       <h2>What are we doing</h2>
       <ul>
         <li>
           <img
-            src="images/picture1.jpg"
+            src="./images/picture1.jpg"
             width="360"
             height="300"
             alt="old Imac"
@@ -79,7 +78,7 @@
         </li>
         <li>
           <img
-            src="images/picture2.jpg"
+            src="./images/picture2.jpg"
             width="360"
             height="300"
             alt="screenshots coming out of the iphone"
@@ -87,69 +86,69 @@
         </li>
         <li>
           <img
-            src="images/picture3.jpg"
+            src="./images/picture3.jpg"
             width="360"
             height="300"
             alt="heand holding phone in front of laptop "
           />
         </li>
       </ul>
-    </section3>
-    <section4>
+    </section>
+    <section>
       <h2>Our Team</h2>
       <ul>
         <li>
           <img
-            src="images/Mark-Guerrero.jpg"
+            src="./images/Mark-Guerrero.jpg"
             width="264"
             height="260"
             alt="Mark Guerrero"
           />
           <h3>Mark Guerrero</h3>
-          <span>Product Designer</span>
+          <p>Product Designer</p>
         </li>
         <li>
           <img
-            src="images/Tom-Ford.jpg"
+            src="./images/Tom-Ford.jpg"
             width="264"
             height="260"
             alt="Tom Ford"
           />
 
           <h3>Tom Ford</h3>
-          <span>Frontend Developer</span>
+          <p>Frontend Developer</p>
         </li>
         <li>
           <img
-            src="images/Camila-Garcia.jpeg"
+            src="./images/Camila-Garcia.jpg"
             width="264"
             height="260"
             alt="Camila Garcia"
           />
 
           <h3>Camila Garcia</h3>
-          <span>Marketing</span>
+          <p>Marketing</p>
         </li>
         <li>
           <img
-            src="images/Daniel-Wilson.jpg"
+            src="./images/Daniel-Wilson.jpg"
             width="264"
             height="260"
             alt="Daniel Wilson"
           />
           <h3>Daniel Wilson</h3>
-          <span>UI Designer</span>
+          <p>UI Designer</p>
         </li>
       </ul>
-    </section4>
+    </section>
     <section>
-    <footer>
-      <h3>WEBSTUDIO</h3>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
-  </section>
+      <footer>
+        <a href="./index.html">WebStudio</a>
+        <p>
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </footer>
+    </section>
   </body>
 </html>
