--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               src="./images/Mark-Guerrero.jpg"
               width="264"
               height="260"
-              alt="Mark Guerrero"
+              alt="smiling man with black beard and short hair wearinng light blue shirt"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -107,7 +107,7 @@
               src="./images/Tom-Ford.jpg"
               width="264"
               height="260"
-              alt="Tom Ford"
+              alt="smiling man in blue shirt looking to the right"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
@@ -117,7 +117,7 @@
               src="./images/Camila-Garcia.jpg"
               width="264"
               height="260"
-              alt="Camila Garcia"
+              alt="young woman with long hair in pink sweater and lipstick"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -127,7 +127,7 @@
               src="./images/Daniel-Wilson.jpg"
               width="264"
               height="260"
-              alt="Daniel Wilson"
+              alt="smiling man in a greay t-shirt looking in front"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
